# stenography

./: CMakeLists.txt  main.c  run.sh
.github/workflows/: build-macos.yml
